test: ensure that tests appropriately assert on every field value